[package]
name = "quiver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy = "0.15.7"
tera = "1.20.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-private"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["normalize-path", "fs"] }
